--- a/uno.css
+++ b/uno.css
@@ -38,7 +38,7 @@ header p {
   background-repeat: no-repeat;
   background-position: center;
   color: #ffffff;
-  height: 500px;
+  height: 100%;
   text-shadow: 0.5px 0.5px 0.5px #000000;
 }
 
